[package]
name = "lifter"
version = "1.2.0"
edition = "2024"
description = "Serverless file sharing for maximum security"
readme = "README.md"
repository = "https://github.com/Fabian2611/lift"
license = "AGPL-3.0-or-later"
keywords = ["network", "file-sharing", "files", "transfer"]
categories = ["command-line-utilities"]

[dependencies]
warp = { version = "0.4.3", features = ["server"] }
tokio = { version = "1.52.3", features = ["full"] }
rand = "0.10.1"
bore-cli = "0.6.0"
clap = { version = "4.6.1", features = ["derive"] }

[[bin]]
name = "lift"
path = "src/main.rs"
